src/objects/Course_Account_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Course_Account_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Course_Account_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Technical_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>inherited from Account</inlineHelpText>
        <label>Technical Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Account_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course/Account Association</label>
    <nameField>
        <label>Course/Account Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course/Account Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_associate_Course_with_inactive_IP</fullName>
        <active>true</active>
        <description>Rule to avoid association of course with Industry Partner Account which is not yet Approved</description>
        <errorConditionFormula>AND( Account__r.RecordType.Name = &quot;Industry Partner&quot; , Account__r.Active__c = False)</errorConditionFormula>
        <errorMessage>The Industry Partner account you trying to associate with this course is inactive and not yet approved</errorMessage>
    </validationRules>
</CustomObject>